--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -146,23 +146,38 @@
 
     </LinearLayout>
 
-    <Button
-        android:id="@+id/button_login"
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:backgroundTint="@color/color_block_button"
-        android:fontFamily="@font/mabrypro_medium"
-        android:paddingVertical="19dp"
-        android:text="@string/continue_next"
-        android:textColor="@color/white"
-        android:textSize="18sp"
-        app:cornerRadius="100dp"
-        android:lineSpacingExtra="4sp"
-        android:enabled="false"
         android:layout_marginHorizontal="16dp"
         android:layout_marginBottom="24dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent">
+
+        <Button
+            android:id="@+id/button_login"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/color_block_button"
+            android:fontFamily="@font/mabrypro_medium"
+            android:paddingVertical="21dp"
+            android:text="@string/continue_next"
+            android:includeFontPadding="false"
+            android:textColor="@color/white"
+            android:textSize="18sp"
+            app:cornerRadius="100dp"
+            android:lineSpacingExtra="4sp"
+            android:enabled="false" />
+
+        <ProgressBar
+            android:id="@+id/progress_login"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:indeterminateTint="@android:color/black"
+            android:visibility="invisible"
+            tools:visibility="visible"/>
+    </FrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
