--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -326,9 +326,10 @@
             android:layout_height="wrap_content"
             android:backgroundTint="@color/color_block_button"
             android:fontFamily="@font/mabrypro_medium"
-            android:paddingVertical="19dp"
+            android:paddingVertical="21dp"
             android:text="@string/continue_next"
             android:textColor="@color/white"
+            android:includeFontPadding="false"
             android:textSize="18sp"
             app:cornerRadius="100dp"
             android:enabled="false"
