--- a/app/src/main/res/layout/bottom_sheet_ground.xml
+++ b/app/src/main/res/layout/bottom_sheet_ground.xml
@@ -20,6 +20,7 @@
             android:src="@drawable/image_onboarding_fourth" />
 
         <ImageButton
+            android:id="@+id/button_close_ground"
             android:layout_width="44dp"
             android:layout_height="44dp"
             android:layout_gravity="end"
