--- a/app/src/main/res/layout/fragment_section.xml
+++ b/app/src/main/res/layout/fragment_section.xml
@@ -82,9 +82,8 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:orientation="vertical"
-        android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@+id/frameLayout">
 
         <androidx.recyclerview.widget.RecyclerView
