--- a/app/src/main/res/layout/item_recommendation.xml
+++ b/app/src/main/res/layout/item_recommendation.xml
@@ -4,7 +4,9 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    app:cardCornerRadius="26dp">
+    app:cardCornerRadius="26dp"
+    android:id="@+id/main_layout"
+    android:layout_marginHorizontal="10dp">
 
     <ImageView
         android:layout_width="match_parent"
